# codeview

./: .gitignore  CLAUDE.md  Cargo.toml
.github/workflows/: build-std-docs.yml  parse.yml  std.yml
codeview-cli/: Cargo.toml  build.rs
codeview-cli/src/: main.rs  sysroot.rs
codeview-cli/src/cron/: catalog.rs  freshness_merge.rs  metadata.rs  mimic.rs  mod.rs  parse_one.rs  parse_shard.rs  plan.rs  publish_run.rs  seed_std.rs  sweep.rs
codeview-cli/src/publisher/: artifacts.rs  crates_dump.rs  crates_io.rs  docs_rs.rs  freshness.rs  hosted_artifacts.rs  mod.rs  r2.rs  shards.rs
codeview-core/: Cargo.toml
codeview-core/src/: lib.rs
codeview-render/: Cargo.toml
codeview-render/src/: web.rs
codeview-render/src/render/: mod.rs
codeview-rustdoc/: Cargo.toml
codeview-rustdoc/src/: lib.rs  wasm.rs
codeview-ui/: .gitignore  .prettierignore  .prettierrc  components.json  drizzle.auth.config.ts  drizzle.config.ts  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.js  vite.config.ts  wrangler.parser.toml  wrangler.toml
codeview-ui/docs/perf/: parse-batch-yield-ab-2026-02-12.md
codeview-ui/drizzle/: migrations.js
codeview-ui/drizzle/20260129161034_lean_crystal/: snapshot.json
codeview-ui/e2e/: accessibility.test.ts  crate-status.test.ts  detail-view.test.ts  edge-cases.test.ts  fixtures.ts  fresh-parse.test.ts  landing.test.ts  no-js-theme.test.ts  performance.test.ts  run-cf-dev-supervisor.mjs  sse-lifecycle.test.ts  state-corruption.test.ts  state-sync.test.ts  tree-filtering.test.ts  ui-state.test.ts  visualizations.test.ts
codeview-ui/patches/: @jesterkit%2Fexe-sveltekit@0.1.7.patch
codeview-ui/scripts/: build-sidecar.sh  build-std-docs.ts  bulk-put-local.ts  freshness-backends.ts  freshness-sweep.ts  generate-schema.ts  harden-cloudflare-worker.ts  local-mimic.ts  parse-one.ts  publish-static-batch.ts  publish-static-crate.ts  rebuild-catalog.ts  retain-cloudflare-assets.ts  seed-std-if-missing.ts  static-artifacts.ts  with-env.ts  with-platform.ts
codeview-ui/src/: app.css  app.d.ts  app.html  cloudflare.d.ts  hooks.client.ts  hooks.server.ts  parse-worker.ts  service-worker.ts  sql.d.ts  wasm.d.ts
codeview-ui/src/lib/: app-paths.ts  cache.svelte.ts  context.ts  crate-names.ts  crate-ref.ts  crate-status.svelte.ts  detail-model.test.ts  detail-model.ts  display-names.ts  docs-url.ts  docs.ts  errors.ts  geo.ts  graph-label-layout.ts  graph-layout.ts  graph-updates.svelte.ts  graph.remote.ts  graph.ts  highlight.ts  hosted-contract.test.ts  hosted-contract.ts  layout.ts  load-precedence.test.ts  load-precedence.ts  log.server.ts  log.ts  node-labels.ts  node-order.ts  node-summary.test.ts  node-summary.ts  node-visual.ts  pagination.test.ts  pagination.ts  path-structure.ts  perf.svelte.ts  perf.ts  platform.ts  preferences.ts  processing-status.svelte.ts  processing.svelte.ts  (+32 more)
codeview-ui/src/lib/client/: invalidation.ts
codeview-ui/src/lib/components/: AdminForceParseForm.svelte  Breadcrumbs.svelte  CodeBlock.svelte  CollapsibleSection.svelte  CrateGraph.svelte  CrateGrid.svelte  CrateHeader.svelte  CrateNodePage.svelte  CrateParseState.svelte  CrateSidebar.svelte  CrateSunburst.svelte  CrateTreemap.svelte  DetailView.svelte  DocSection.svelte  DocToc.svelte  DocsUnavailable.svelte  Documentation.svelte  GlobalCrateCommand.svelte  GraphCanvas.svelte  GraphLegend.svelte  GraphTree.svelte  HeroPanel.svelte  LayoutSwitcher.svelte  NodeDetails.svelte  ParseError.svelte  ParseToastContent.svelte  ProgressToast.svelte  RelationshipGraph.svelte  SearchResults.svelte  SettingsDrawer.svelte  SettingsRadioOption.svelte  SignatureBlock.svelte  Skeleton.svelte  SkeletonTree.svelte  SourceActions.svelte  SourceViewer.svelte  StablePagination.svelte  StatsPanel.svelte  StdDocsPrompt.svelte  ThreeGraph.svelte  (+4 more)
codeview-ui/src/lib/design/: live-node.ts  relationship-groups.test.ts  relationship-groups.ts
codeview-ui/src/lib/exporters/: excalidraw.test.ts  excalidraw.ts
codeview-ui/src/lib/geo/: angle.ts  curve.ts  ellipse.ts  index.ts  point.ts  polygon.ts  range.ts  rect.ts  segment.ts  types.ts  utils.ts  vector.ts
codeview-ui/src/lib/graph/: crate-map.test.ts  crate-map.ts  index.ts  pan-zoom.svelte.ts  projection.test.ts  projection.ts  tree-index.ts
codeview-ui/src/lib/highlight/: documentation.test.ts  documentation.ts  index.ts  languages.ts  markdown.test.ts  markdown.ts  shiki.test.ts  shiki.ts  theme-contrast.test.ts
codeview-ui/src/lib/realtime/: constants.ts  index.ts  processing.svelte.ts  (+4 more)
codeview-ui/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
codeview-ui/tests/: edge-streaming.spec.ts
resources/codeview-handoff/codeview/: README.md
resources/research/: bun-to-node-migration-plan.md  handoff-jsx-inventory.md  htmlswap-jsx-frontend-design.md  parse-pipeline-current-state.md  parse-pipeline-redesign.md  phase-b-integration-plan.md  research-acquisition-validation.md  research-scheduling-fanout.md  research-serving-data-model.md  research-ssr-svelte5-urlstate.md
(+284 files in other folders)
