[package]
name = "codeview-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
codeview-core = { path = "../codeview-core" }
codeview-rustdoc = { path = "../codeview-rustdoc" }
ctrlc = "3.4"
open = "5"
serde_json = "1.0.149"
