[package]
name = "codeview-render"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
web = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "console_error_panic_hook", "js-sys"]

[dependencies]
codeview-core = { path = "../codeview-core" }

# Math and data structures
glam = { version = "0.30", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
rustc-hash = "2"

# wgpu rendering
wgpu = { version = "28", features = ["webgl"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "Navigator",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "GpuCanvasContext",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuQueue",
    "Performance",
    "console",
] }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = { version = "0.3", optional = true }

# Async runtime
pollster = "0.4"

[dev-dependencies]
